workspace/second/src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>All_Products__c</fullName>
        <label>All_Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>onep</fullName>
                </value>
                <value>
                    <fullName>twop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_rate__c</fullName>
        <label>Day_rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Charge__c</fullName>
        <label>Standing_Charge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>vinay</fullName>
                </value>
                <value>
                    <fullName>harish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>